-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.145 2007-11-14 00:31:53 guru Exp $
-----------------------------------------------------------------------------------------

2007-11-13	remko
	* gmt_grdio.c:		Fixed bug in parsing -D option from e.g. grdedit. Would always
				see 0 as separator (along with /).
	* gmt_support.c:	Removed strncpy from GMT_strtok. No consequence on function.
	* grdinfo.c:		zmin==zmax no longer forces -M option.
			
2007-11-13	pwessel
	* gmt_map.c:		Minor bug in 4th term in conformal->geodetic lat.
	* pslib.c:		Redefine rect symbol to be less prone to round-off
	* PSL_prologue.ps:	New macro for box symbol
	
2007-11-04	pwessel
	* ps2raster.c:		New option -D<dir> specifies alternative output directory.
				Also added -V for progress reports [Default is silent].
				
2007-11-02	remko
	* gmt_proj.[ch], gmt_project.h, gmt_map.c, gmt_init.c, explain_-J*.txt:
				Added optional horizon to global azimuthal projections (-J[AEGS]),
				also made horizon optional in Gnomonic projection (-JF).

2007-11-01	pwessel
	* gmt_support.c:	In GMT_contour, would occasionally not check internal crossings
				for some interior contours.
2007-10-31	pwessel
	* g*math.c:		Would see files like 13239.d as possible numbers and give
				annoying warnings (file was correctly chosen so no bug).
				
2007-10-31	remko
	* gmt_proj.c:		Review of all inverse projections. Bug fixes:
				. -JS: Would set slice to NaN if central meridian was not Greenwich.
				. -JR: Longitudes beyond 180 were set to 180.
				Return NaN when longitude is more than 180 from central meridian:
				. Cylindrical and miscellaneous projections -J[IKNRW]
				Return NaN when point is out of map disc:
				. Azimuthal and miscellaneous projections -J[AEGHSV]
	* gmt_map.c (GMT_grd_project):		Now also wraps around longitude when
				GMT_IS_RECT_GRATICULE. Removed initialization with NaN.